# arch-linux-installer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md
docs/: config-specification.md  config-specification.yaml
examples/: bios-config.yaml  bios-encrypt-config.yaml  config.yaml  efi-config.yaml  efi-encrypt-config.yaml  example-config.conf  new-config.yaml
include/archlinuxinstaller/: archlinuxinstaller.hpp  packageinstaller.hpp
include/archlinuxinstaller/config/: device.hpp  devices.hpp  encryption.hpp  partition.hpp  settings.hpp  sshdecrypt.hpp  user.hpp  volume.hpp  volumegroup.hpp
include/archlinuxinstaller/configuration/: commentconfigline.hpp  config.hpp  configline.hpp  textconfigline.hpp  varconfigline.hpp
include/archlinuxinstaller/modules/: module.hpp  userinput.hpp
include/archlinuxinstaller/modules/devices/: device.hpp  devices.hpp  encryption.hpp  partition.hpp  sshdecrypt.hpp  volume.hpp  volumegroup.hpp
include/archlinuxinstaller/modules/general/: general.hpp
include/archlinuxinstaller/modules/logging/: logging.hpp
include/archlinuxinstaller/modules/pacman/: pacman.hpp
include/archlinuxinstaller/utils/: formatutils.hpp  memutils.hpp  stringutils.hpp  systemutils.hpp
src/: CMakeLists.txt  configuration.hpp  main.cpp  utils.hpp
src/archlinuxinstaller/: archlinuxinstaller.cpp  packageinstaller.cpp
src/archlinuxinstaller/config/: device.cpp  devices.cpp  encryption.cpp  partition.cpp  settings.cpp  sshdecrypt.cpp  user.cpp  volume.cpp  volumegroup.cpp
src/archlinuxinstaller/configuration/: commentconfigline.cpp  config.cpp  configline.cpp  textconfigline.cpp  varconfigline.cpp
src/archlinuxinstaller/modules/: module.cpp  userinput.cpp
src/archlinuxinstaller/utils/: formatutils.cpp  stringutils.cpp  systemutils.cpp
src/configuration/: commentconfigline.cpp  commentconfigline.hpp  config.cpp  config.hpp  configline.cpp  configline.hpp  textconfigline.cpp  textconfigline.hpp  varconfigline.cpp  varconfigline.hpp
src/utils/: memutils.cpp  memutils.hpp  stringutils.cpp  stringutils.hpp  systemutils.cpp  systemutils.hpp
(+16 files in other folders)
